[tool.poetry]
name = "ticktick"
version = "0.1.0"
description = "ticktick for home"
authors = ["Jack <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
google-cloud-texttospeech = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
